5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1764_2390.log
== TEST (2019-05-29 22:48:05) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:48:56) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:49:55) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:54:03) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 0
while(c < size(a)-1):
	if(v[a]==max(v)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:54:42) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 0
while(c < size(a)-1):
	if(v[c]==max(v)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:57:06) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
print(v)
c = 0
t = 0
while(c < size(a)-1):
	if(v[c]==max(v)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:58:09) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
print(v)
y=max(v)
print(y)
c = 0
t = 0
while(c < size(a)-1):
	if(v[c]==max(v)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:00:34) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
print(v)

c = 0
t = 0
y=v[c]
print(y)
while(c < size(a)-1):
	if(v[c]==max(v)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:03:24) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 0
while(c < size(a)-1):
	if(v[c]==max(v)):
		t = t + 1
		print(v[c])
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:04:27) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 0
while(c < size(a)-1):
	if(v[c]==max(v)):
		t = t + 1
		print(v[c])
	c = c + 1
	print(c)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:05:55) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)-1):
	if(v[c] != max(v)):
		t = t + 1
		print(v[c])
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:06:55) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)-1):
	if(v[c] != max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.482039
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:07:06) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)-1):
	if(v[c] != max(v)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:07:31) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)-1):
	if(v[c] != max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.567126
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:09:56) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)-1):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.602522
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:11:28) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)1):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.159763
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 8
    while(c < size(a)1):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:11:32) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)1):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.18257
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 8
    while(c < size(a)1):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:11:41) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(len(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.444371
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:12:22) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.403738
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:12:30) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:22:19) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	else
	c = c + 1
print(t)
-- EXECUTION TIME:
0.223193
-- ERROR:
  File "/home/codebench/codes/1764/2390/main.py", line 11
    else
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:22:53) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.405793
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:23:24) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(max(v))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:24:56) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a)-1, dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		print(v[c])
		t = t + 1
	c = c + 1
print(max(v))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:35:49) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a)-1, dtype=int)
print(v)
v = a - b
print(v)
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(max(v))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:36:03) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a)-1, dtype=int)
print(v)
v = a - b
print(v)
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:41:41) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:42:10) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.629168
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:43:28) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
v = a - b
c = 0
t = 1
while(c < size(a)):
	if(v[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.624265
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:43:48) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a - b
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.491222
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:43:50) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a - b
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(v)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:47:38) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a - b
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(v)):
		print(g[c])
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:48:23) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a - b
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(g)):
		print(g[c])
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:48:53) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a - b
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(g)):
		t = t + 1
	c = c + 1
print(t)
-- EXECUTION TIME:
0.455765
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:49:15) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
print(v)
g = a - b
print(g)
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(g)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:52:40) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a - b
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(g)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:54:59) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a - b
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(g)):
		t = t + 1
		print(g[c])
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:59:47) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a - b
print(g[0])
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(g)):
		t = t + 1
		print(g[c])
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:06:36) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a-b
c = 0
t = 1
while(c < size(a)):
	v[c] = a[c] - b[c]
	if(v[c] < max(g)):
		t = t + 1
		print(g[c])
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:03:58) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a-b
c = 0
t = 1
while(c < size(a)):
	v[c] = a[c] - b[c]
	if(v[c] < max(g)):
		t = t + 1
	c = c + 1
print(c)
-- EXECUTION TIME:
0.545425
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:06:17) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a-b
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(g)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:14:26) 
-- CODE:
from numpy import *
a = array(eval(input("mes: ")))
b = array(eval(input("falta: ")))
v = zeros(size(a), dtype=int)
g = a-b
print(g)
c = 0
t = 1
while(c < size(a)):
	if(g[c] < max(g)):
		t = t + 1
	c = c + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:58:02) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.532175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 9, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:58:09) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.598061
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/2390/main.py", line 9, in <module>
    if(f[i] == mf):
NameError: name 'mf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 12:58:10) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
fm = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 12:58:58) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
mf = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)

-- EXECUTION TIME:
0.504373
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:03:50) 
-- CODE:
from numpy import*

f = array(eval(input("frequencia:")))
mf = max(f)

i = 0
mes = 0
while(i < size(f)):
	if(f[i] == mf):
		mes = i + 1
	i = i + 1
print(mes)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
